--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <!-- <link rel="stylesheet" href="https://at.alicdn.com/t/c/font_3960280_apmdgcn7ryj.css"> -->
-    <title>Vite + Vue</title>
+    <title>EC6001-PPlove</title>
   </head>
   <body>
     <div id="app"></div>
